PART 11: מערכת דשבורד מתקדמת
 תיקונים עיקריים:
-  מערכת אימות Google OAuth מתוקנת
-  דשבורד עם 4 גרפים אינטראקטיביים
-  Dropdowns לבחירת טווחי זמן
-  גרף פאי עם אחוזים וסכומים בפנים
-  טבלת עסקאות אחרונות מסודרת
-  עמודת תשלומים חכמה (installment_info)
-  מבנה DB מתוקן וקשרים נכונים

 פיצ'רים חדשים:
- גרפים: חודשי, שבועי, קטגוריות, יומי
- בחירת טווח: 3-6 חודשים, 4-8 שבועות, 7-30 ימים
- הצגת כל הסכומים כחיוביים (ללא מינוס)
- מערכת AI/ידני לקטגוריזציה
- תשלומים: זיהוי X מתוך Y עם חישוב תאריכים

 תשתית:
- טעינת 1078 עסקאות בבטחים
- Session persistence לאימות
- Auto-refresh tokens
- Error handling משופר

--- a/web/transactions.html
+++ b/web/transactions.html
@@ -134,7 +134,7 @@
                       📂 קטגוריה <span class="sort-arrow"></span>
                     </th>
                     <th data-sort="company">
-                      💳 חברה <span class="sort-arrow"></span>
+                      💳 תשלומים והערות <span class="sort-arrow"></span>
                     </th>
                     <th data-sort="card_last_four">
                       🔢 כרטיס <span class="sort-arrow"></span>
