--- a/web/index.html
+++ b/web/index.html
@@ -71,14 +71,161 @@
           </div>
 
           <!-- גרפים -->
-          <div class="charts-grid">
-            <div class="chart-container">
-              <h3 class="chart-title">📈 הוצאות לפי חודשים</h3>
+          <!-- עדכן את חלק הגרפים ב-index.html -->
+          <div
+            class="charts-grid"
+            style="
+              display: grid;
+              grid-template-columns: 1fr 1fr;
+              gap: 20px;
+              margin: 30px 0;
+            "
+          >
+            <!-- גרף חודשי -->
+            <div
+              class="chart-container"
+              style="
+                background: white;
+                padding: 20px;
+                border-radius: 12px;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+              "
+            >
+              <div
+                style="
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  margin-bottom: 15px;
+                "
+              >
+                <h3 class="chart-title" style="margin: 0">
+                  📈 הוצאות לפי חודשים
+                </h3>
+                <select
+                  id="monthlyRange"
+                  style="
+                    padding: 5px 10px;
+                    border: 1px solid #ddd;
+                    border-radius: 5px;
+                    font-size: 14px;
+                  "
+                >
+                  <option value="3">3 חודשים</option>
+                  <option value="6" selected>6 חודשים</option>
+                </select>
+              </div>
               <canvas id="monthlyChart"></canvas>
             </div>
-            <div class="chart-container">
-              <h3 class="chart-title">🥧 התפלגות לפי קטגוריות</h3>
+
+            <!-- גרף שבועי -->
+            <div
+              class="chart-container"
+              style="
+                background: white;
+                padding: 20px;
+                border-radius: 12px;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+              "
+            >
+              <div
+                style="
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  margin-bottom: 15px;
+                "
+              >
+                <h3 class="chart-title" style="margin: 0">📊 הוצאות שבועיות</h3>
+                <select
+                  id="weeklyRange"
+                  style="
+                    padding: 5px 10px;
+                    border: 1px solid #ddd;
+                    border-radius: 5px;
+                    font-size: 14px;
+                  "
+                >
+                  <option value="4" selected>4 שבועות</option>
+                  <option value="8">8 שבועות</option>
+                </select>
+              </div>
+              <canvas id="weeklyChart"></canvas>
+            </div>
+
+            <!-- גרף קטגוריות -->
+            <div
+              class="chart-container"
+              style="
+                background: white;
+                padding: 20px;
+                border-radius: 12px;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+              "
+            >
+              <div
+                style="
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  margin-bottom: 15px;
+                "
+              >
+                <h3 class="chart-title" style="margin: 0">
+                  🥧 התפלגות לפי קטגוריות
+                </h3>
+                <select
+                  id="categoryRange"
+                  style="
+                    padding: 5px 10px;
+                    border: 1px solid #ddd;
+                    border-radius: 5px;
+                    font-size: 14px;
+                  "
+                >
+                  <option value="1">חודש אחרון</option>
+                  <option value="3" selected>3 חודשים</option>
+                  <option value="6">6 חודשים</option>
+                  <option value="12">שנה</option>
+                </select>
+              </div>
               <canvas id="categoryChart"></canvas>
+            </div>
+
+            <!-- גרף יומי -->
+            <div
+              class="chart-container"
+              style="
+                background: white;
+                padding: 20px;
+                border-radius: 12px;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+              "
+            >
+              <div
+                style="
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  margin-bottom: 15px;
+                "
+              >
+                <h3 class="chart-title" style="margin: 0">📈 מגמה יומית</h3>
+                <select
+                  id="dailyRange"
+                  style="
+                    padding: 5px 10px;
+                    border: 1px solid #ddd;
+                    border-radius: 5px;
+                    font-size: 14px;
+                  "
+                >
+                  <option value="7" selected>7 ימים</option>
+                  <option value="14">14 ימים</option>
+                  <option value="30">30 ימים</option>
+                </select>
+              </div>
+              <canvas id="dailyChart"></canvas>
             </div>
           </div>
 
