--- a/web/ai-insights.html
+++ b/web/ai-insights.html
@@ -3,14 +3,303 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🧠 תובנות AI - ניהול פיננסי</title>
+    <title>🧠 תובנות AI מתקדמות - ניהול פיננסי</title>
 
     <!-- External Scripts -->
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+
+    <!-- Our New AI Scripts -->
+    <script src="js/ai-insights-core.js"></script>
+    <script src="js/ai-insights-advanced.js"></script>
 
     <!-- Our Styles and Scripts -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/ai-insights.css" />
+
+    <!-- Advanced AI Styles -->
+    <style>
+      /* 🎨 עיצובים נוספים לתכונות המתקדמות */
+      .insights-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 20px;
+        margin-bottom: 30px;
+      }
+
+      .insight-card {
+        background: white;
+        border-radius: 15px;
+        padding: 25px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        border-left: 5px solid #667eea;
+        transition: transform 0.3s ease;
+      }
+
+      .insight-card:hover {
+        transform: translateY(-3px);
+      }
+
+      .insight-title {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 15px;
+        font-weight: bold;
+        color: #333;
+      }
+
+      .insight-content {
+        font-size: 0.95rem;
+        line-height: 1.5;
+        color: #555;
+      }
+
+      .insight-value {
+        font-size: 1.8rem;
+        font-weight: bold;
+        color: #667eea;
+        margin: 10px 0;
+      }
+
+      .trend-up {
+        color: #28a745;
+      }
+      .trend-down {
+        color: #dc3545;
+      }
+      .trend-neutral {
+        color: #6c757d;
+      }
+
+      .alerts-section {
+        background: white;
+        border-radius: 15px;
+        padding: 25px;
+        margin-bottom: 30px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      }
+
+      .alerts-section h3 {
+        margin-top: 0;
+        color: #333;
+        border-bottom: 2px solid #ffc107;
+        padding-bottom: 10px;
+      }
+
+      .alert-item {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        padding: 15px;
+        margin-bottom: 10px;
+        border-radius: 10px;
+        border-left: 4px solid #ffc107;
+        background: #fff8e1;
+      }
+
+      .alert-item.critical {
+        border-left-color: #dc3545;
+        background: #fff5f5;
+      }
+
+      .alert-item.warning {
+        border-left-color: #ffc107;
+        background: #fff8e1;
+      }
+
+      .alert-item.info {
+        border-left-color: #17a2b8;
+        background: #f0f9ff;
+      }
+
+      .alert-item.success {
+        border-left-color: #28a745;
+        background: #f0fff4;
+      }
+
+      .alert-icon {
+        font-size: 1.5rem;
+      }
+
+      .alert-content {
+        flex: 1;
+      }
+
+      .alert-title {
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 5px;
+      }
+
+      .alert-description {
+        color: #666;
+        font-size: 0.9rem;
+      }
+
+      .predictions-section {
+        background: linear-gradient(135deg, #667eea 0%, #8ec3ff 100%);
+        color: white;
+        border-radius: 15px;
+        padding: 30px;
+        margin-bottom: 30px;
+        box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);
+      }
+
+      .predictions-section h3 {
+        margin-top: 0;
+        font-size: 1.8rem;
+      }
+
+      .prediction-item {
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 15px;
+        backdrop-filter: blur(10px);
+      }
+
+      .prediction-month {
+        font-weight: bold;
+        font-size: 1.1rem;
+        margin-bottom: 10px;
+      }
+
+      .prediction-amount {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .prediction-confidence {
+        font-size: 0.9rem;
+        opacity: 0.8;
+      }
+
+      .spending-patterns {
+        background: white;
+        border-radius: 15px;
+        padding: 25px;
+        margin-bottom: 30px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      }
+
+      .spending-patterns h3 {
+        margin-top: 0;
+        color: #333;
+        border-bottom: 2px solid #667eea;
+        padding-bottom: 10px;
+      }
+
+      .pattern-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px;
+        margin-bottom: 10px;
+        background: #f8f9ff;
+        border-radius: 10px;
+        border-left: 4px solid #667eea;
+      }
+
+      .pattern-info {
+        flex: 1;
+      }
+
+      .pattern-title {
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 5px;
+      }
+
+      .pattern-description {
+        color: #666;
+        font-size: 0.9rem;
+      }
+
+      .pattern-impact {
+        font-weight: bold;
+        font-size: 1.1rem;
+        color: #667eea;
+      }
+
+      .recommendations-section {
+        background: linear-gradient(135deg, #6ad4c1 0%, #ffbb6d 100%);
+        color: white;
+        border-radius: 15px;
+        padding: 30px;
+        margin-bottom: 30px;
+        box-shadow: 0 8px 32px rgba(40, 167, 69, 0.3);
+      }
+
+      .recommendations-section h3 {
+        margin-top: 0;
+        font-size: 1.8rem;
+      }
+
+      .recommendation-item {
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 15px;
+        backdrop-filter: blur(10px);
+      }
+
+      .recommendation-title {
+        font-weight: bold;
+        font-size: 1.1rem;
+        margin-bottom: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .recommendation-description {
+        margin-bottom: 10px;
+        opacity: 0.9;
+      }
+
+      .recommendation-impact {
+        font-weight: bold;
+        font-size: 1.2rem;
+        color: #fff3cd;
+      }
+
+      .chart-container {
+        background: white;
+        border-radius: 15px;
+        padding: 25px;
+        margin-bottom: 30px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        height: 400px;
+      }
+
+      .chart-title {
+        font-size: 1.2rem;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 20px;
+        text-align: center;
+      }
+
+      @media (max-width: 768px) {
+        .insights-grid {
+          grid-template-columns: 1fr;
+        }
+
+        .pattern-item,
+        .alert-item {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 10px;
+        }
+
+        .chart-container {
+          height: 300px;
+          padding: 15px;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -44,29 +333,151 @@
         <div id="header-container"></div>
 
         <div id="loading" class="loading">
-          <h3>🧠 טוען תובנות AI...</h3>
+          <h3>🧠 טוען תובנות AI מתקדמות...</h3>
         </div>
 
         <div id="error-message" class="error" style="display: none"></div>
 
         <div id="ai-content" style="display: none">
-          <!-- 📊 סטטיסטיקות AI -->
+          <!-- 📊 סטטיסטיקות AI מתקדמות -->
           <div class="ai-stats-grid">
             <div class="ai-stat-card">
               <div class="stat-value" id="ai-accuracy">0%</div>
-              <div class="stat-label">דיוק השבוע</div>
+              <div class="stat-label">🎯 דיוק השבוע</div>
             </div>
             <div class="ai-stat-card">
               <div class="stat-value" id="ai-processed">0</div>
-              <div class="stat-label">עסקאות מעובדות</div>
+              <div class="stat-label">⚡ עסקאות מעובדות</div>
             </div>
             <div class="ai-stat-card">
               <div class="stat-value" id="ai-learned">0</div>
-              <div class="stat-label">עסקים נלמדו</div>
+              <div class="stat-label">🧠 עסקים נלמדו</div>
             </div>
             <div class="ai-stat-card">
               <div class="stat-value" id="ai-improvement">+0%</div>
-              <div class="stat-label">שיפור מהשבוע שעבר</div>
+              <div class="stat-label">📈 שיפור מהשבוע שעבר</div>
+            </div>
+          </div>
+
+          <!-- 🚨 התראות חכמות + דפוסי הוצאה באותה שורה -->
+          <div class="alerts-patterns-row">
+            <!-- התראות חכמות בצד שמאל -->
+            <div class="alerts-section-compact">
+              <h3>🚨 התראות חכמות</h3>
+              <div id="smart-alerts">
+                <!-- יתמלא ב-JavaScript -->
+              </div>
+            </div>
+
+            <!-- דפוסי הוצאה בצד ימין -->
+            <div class="spending-patterns-compact">
+              <h3>🔍 דפוסים שזוהו על ידי AI</h3>
+              <div id="spending-patterns-list">
+                <!-- יתמלא ב-JavaScript -->
+              </div>
+            </div>
+          </div>
+
+          <!-- 🔮 תחזיות + תובנות באותה שורה -->
+          <div class="predictions-insights-row">
+            <!-- תחזיות בצד שמאל -->
+            <div class="predictions-section-compact">
+              <h3>🔮 תחזיות AI לחודש הבא</h3>
+
+              <div class="prediction-item">
+                <div class="prediction-month">החודש הבא</div>
+                <div class="prediction-amount" id="next-month-prediction">
+                  ₪0
+                </div>
+                <div class="prediction-confidence" id="next-month-details">
+                  חישוב...
+                </div>
+              </div>
+
+              <div class="prediction-item">
+                <div class="prediction-month">בעוד חודשיים</div>
+                <div class="prediction-amount" id="two-months-prediction">
+                  ₪0
+                </div>
+                <div class="prediction-confidence" id="two-months-details">
+                  חישוב...
+                </div>
+              </div>
+
+              <div class="prediction-item">
+                <div class="prediction-month">סה"כ השנה</div>
+                <div class="prediction-amount" id="yearly-prediction">₪0</div>
+                <div class="prediction-confidence" id="yearly-details">
+                  מתחילת השנה
+                </div>
+              </div>
+            </div>
+
+            <!-- 4 השדות בצד ימין - 2 מתחת ל-2 -->
+            <div class="insights-grid-2x2">
+              <div class="insight-card">
+                <div class="insight-title">
+                  <span>📊</span>
+                  <span>הוצאה יומית ממוצעת</span>
+                </div>
+                <div class="insight-content">
+                  <div class="insight-subtitle">בהשוואה לחודש קודם</div>
+                  <div class="insight-value" id="daily-average">₪0</div>
+                  <div id="daily-trend">חישוב מגמה...</div>
+                </div>
+              </div>
+
+              <div class="insight-card">
+                <div class="insight-title">
+                  <span>📅</span>
+                  <span>יום יקר בשבוע</span>
+                </div>
+                <div class="insight-content">
+                  <div class="insight-subtitle">היום עם הוצאה הגבוהה ביותר</div>
+                  <div class="insight-value" id="expensive-day">חישוב...</div>
+                  <div id="expensive-day-amount">ממוצע: ₪0</div>
+                </div>
+              </div>
+
+              <div class="insight-card">
+                <div class="insight-title">
+                  <span>🏆</span>
+                  <span>קטגוריה דומיננטית</span>
+                </div>
+                <div class="insight-content">
+                  <div class="insight-subtitle">
+                    הקטגוריה עם ההוצאה הגבוהה ביותר
+                  </div>
+                  <div class="insight-value" id="top-category">מחשב...</div>
+                  <div id="top-category-percent">0% מההוצאות</div>
+                </div>
+              </div>
+
+              <div class="insight-card">
+                <div class="insight-title">
+                  <span>⚡</span>
+                  <span>תדירות עסקאות</span>
+                </div>
+                <div class="insight-content">
+                  <div class="insight-subtitle">מבוסס על 30 הימים האחרונים</div>
+                  <div class="insight-value" id="transaction-frequency">0</div>
+                  <div>עסקאות ביום בממוצע</div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- 📈 גרף מגמות חכם -->
+          <div class="chart-container">
+            <div class="chart-title">📈 מגמות הוצאה וביצועי AI</div>
+            <canvas id="smartTrendsChart"></canvas>
+          </div>
+
+          <!-- 💰 המלצות לחיסכון -->
+          <div class="recommendations-section">
+            <h3>💰 המלצות AI לחיסכון</h3>
+            <div id="savings-recommendations">
+              <!-- יתמלא ב-JavaScript -->
             </div>
           </div>
 
@@ -91,9 +502,9 @@
             </div>
           </div>
 
-          <!-- 💡 הצעות שיפור -->
+          <!-- 💡 הצעות שיפור קטגוריזציה -->
           <div class="suggestions-section">
-            <h3>💡 הצעות שיפור</h3>
+            <h3>💡 הצעות שיפור קטגוריזציה</h3>
             <div id="suggestions-list">
               <!-- יתמלא ב-JavaScript -->
             </div>
@@ -109,8 +520,8 @@
 
           <!-- 🚀 אימון מחדש -->
           <div class="retrain-section">
-            <h3>🚀 אימון מחדש</h3>
-            <p>אמן את ה-AI מחדש על כל הנתונים לשיפור הדיוק</p>
+            <h3>🚀 אימון מחדש של המערכת</h3>
+            <p>אמן את ה-AI מחדש על כל הנתונים לשיפור הדיוק והתחזיות</p>
             <button id="retrain-btn" class="retrain-btn">🧠 אמן מחדש</button>
             <div id="retrain-status" style="display: none"></div>
           </div>
@@ -123,5 +534,66 @@
     <script src="js/navbar.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/ai-insights.js"></script>
+
+    <script>
+      // 🚀 עדכון הפונקציה initAIPage לשימוש במודולים החדשים
+      async function initAdvancedAIPage() {
+        try {
+          console.log("🤖 מאתחל מערכת AI מתקדמת...");
+
+          // וידוא שהאימות מוכן
+          if (!window.authModule?.currentUser()) {
+            throw new Error("משתמש לא מחובר");
+          }
+
+          // הצגת מסך טעינה
+          document.getElementById("loading").style.display = "block";
+          document.getElementById("ai-content").style.display = "none";
+          document.getElementById("error-message").style.display = "none";
+
+          // אתחול המודול הבסיסי
+          await window.aiCoreModule.init();
+
+          // אתחול המודול המתקדם
+          await window.aiAdvancedModule.init();
+
+          // טעינת תכונות נוספות (שרת AI אם זמין)
+          try {
+            await loadExistingAIFeatures();
+          } catch (error) {
+            console.warn("שרת AI לא זמין במלואו:", error.message);
+          }
+
+          // הצגת התוכן
+          document.getElementById("loading").style.display = "none";
+          document.getElementById("ai-content").style.display = "block";
+
+          console.log("✅ דף AI מתקדם אותחל בהצלחה");
+        } catch (error) {
+          console.error("❌ שגיאה באתחול דף AI מתקדם:", error);
+          showError("שגיאה בטעינת תובנות AI: " + error.message);
+        }
+      }
+
+      // הפיכת הפונקציה החדשה לזמינה גלובלית
+      window.initAdvancedAIPage = initAdvancedAIPage;
+
+      // שגיאה כללית
+      function showError(message) {
+        const errorElement = document.getElementById("error-message");
+        const loading = document.getElementById("loading");
+        const content = document.getElementById("ai-content");
+
+        if (errorElement) {
+          errorElement.style.display = "block";
+          errorElement.textContent = message;
+        }
+
+        if (loading) loading.style.display = "none";
+        if (content) content.style.display = "none";
+
+        console.error("🚨 AI Page Error:", message);
+      }
+    </script>
   </body>
 </html>
